# claude-headspace

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  CURSOR_MIGRATION_SUMMARY.md  LICENSE  MIGRATION_SUMMARY.md  README.md  config.example.yaml  config.yaml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  restart_server.sh  run.py  tailwind.config.js
.claude/: commands
.claude/rules/: ai-guardrails.md
.codex/prompts/: opsx-bulk-archive.md
.cursor/commands/: commit-push.md
.cursor/rules/: python_basics.mdc  writing.mdc
_bmad-output/implementation-artifacts/: tech-spec-rename-task-to-command.md  tech-spec-turn-capture-reliability.md  tech-spec-wip.md
_bmad-output/planning-artifacts/: prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
data/: platform-guardrails.md
docs/: claude-code-hooks-settings.json
docs/application/: claude_code_setup_prompt.md
docs/architecture/: channel-trust-models.md  claude-code-hooks.md  flask-architecture-retention.md  known-limitations.md  tmux-bridge.md  transcript-chat-sequencing.md
docs/beads/: README.md
docs/brain_reboot/: progress_summary.md
orch/: config.yaml
static/: site.webmanifest
templates/: 404.html  activity.html  base.html  channels.html  config.html  dashboard.html  help.html  logging.html  logging_api.html  logging_inference.html  objective.html  persona_detail.html  personas.html  project_show.html  projects.html
tests/: conftest.py  test_app.py  test_database.py  test_models.py
(+1420 files in other folders)
