[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-headspace"
version = "3.1.0"
description = "Kanban-style web dashboard for tracking Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Claude Headspace Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Flask>=3.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Migrate>=4.0",
    "psycopg2-binary>=2.9",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_headspace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
